test/regress/ext:memory64/table_copy_mixed.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\85\80\80\80\00\04\00\00\00\00\04\89\80"
  "\80\80\00\02\70\01\1e\1e\70\05\1e\1e\07\af\80\80"
  "\80\00\04\06\74\65\73\74\33\32\00\00\06\74\65\73"
  "\74\36\34\00\01\0b\74\65\73\74\5f\36\34\74\6f\33"
  "\32\00\02\0b\74\65\73\74\5f\33\32\74\6f\36\34\00"
  "\03\0a\c5\80\80\80\00\04\8c\80\80\80\00\00\41\0d"
  "\41\02\41\03\fc\0e\00\00\0b\8c\80\80\80\00\00\42"
  "\0d\42\02\42\03\fc\0e\01\01\0b\8c\80\80\80\00\00"
  "\41\0d\42\02\41\03\fc\0e\00\01\0b\8c\80\80\80\00"
  "\00\42\0d\41\02\41\03\fc\0e\01\00\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\89\80\80\80\00"
    "\02\70\01\1e\1e\70\05\1e\1e\07\90\80\80\80\00\01"
    "\0c\62\61\64\5f\73\69\7a\65\5f\61\72\67\00\00\0a"
    "\92\80\80\80\00\01\8c\80\80\80\00\00\41\0d\42\02"
    "\42\03\fc\0e\00\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\89\80\80\80\00"
    "\02\70\01\1e\1e\70\05\1e\1e\07\8f\80\80\80\00\01"
    "\0b\62\61\64\5f\73\72\63\5f\69\64\78\00\00\0a\92"
    "\80\80\80\00\01\8c\80\80\80\00\00\41\0d\41\02\41"
    "\03\fc\0e\00\01\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\04\89\80\80\80\00"
    "\02\70\01\1e\1e\70\05\1e\1e\07\8f\80\80\80\00\01"
    "\0b\62\61\64\5f\64\73\74\5f\69\64\78\00\00\0a\92"
    "\80\80\80\00\01\8c\80\80\80\00\00\42\0d\42\02\41"
    "\03\fc\0e\00\01\0b"
  )
  "type mismatch"
)
